--- a/fotowoltaika/package.json
+++ b/fotowoltaika/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/leaflet": "^1.9.3",
+    "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "faker": "^6.6.6",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
+    "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fakers": "^1.0.3-rc1",
